<resources>
    <string name="app_name">EasyEvents</string>
    <string name="HomePage_1">Planning an event should be easy and stress-free! At Easy Events, we make event planning effortless with our expert team and range of services. Let us help you create a memorable and extraordinary event that is sure to impress.</string>
    <string name="welcome_to_easy_events">Welcome to Easy events!</string>
    <string name="HomePage_2">With our expertise in event management, we take care of everything from venue selection and design to catering, entertainment, and logistics. Our dedicated team will work closely with you to understand your vision and execute it flawlessly. From small intimate gatherings to large-scale events, we ensure that every element is thoughtfully curated to reflect your unique style and personality.</string>
    <string name="HomePage_3">Want to organize an event? \nContact us below and we\'ll get back to you.</string>
    <string name="contact_us_button">Contact us</string>
    <string name="subscribe_to_our_newsletter">Subscribe to our newsletter</string>
    <string name="join_button">Join</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="thanks_for_subscribing">Thanks for subscribing!</string>
    <string name="about_us">About Us</string>
    <string name="AboutPage_1">Easy Events is a premier event planning company dedicated to providing exceptional and stress-free experiences. With years of experience in the industry, our team is passionate about creating memorable moments that exceed our clients\' expectations. We understand that planning an event can be overwhelming, and that\'s where we step in. Our mission is to make the process easy and enjoyable for you, from start to finish.</string>
    <string name="AboutPage_2">At Easy Events, we believe in the power of personalization. We take the time to understand your vision, preferences, and goals for your event, and then transform them into a beautifully orchestrated celebration. From creative design and meticulous planning to flawless execution, we pay attention to every detail to ensure a seamless and unforgettable event. Our dedicated team of professionals brings creativity, expertise, and a wealth of industry knowledge to the table, ensuring that your event is a true reflection of your style and personality.</string>
    <string name="our_story">Our Story</string>
    <string name="AboutPage_3">Easy Events was born out of a passion for crafting seamless and unforgettable experiences. Founded by Sarah Thompson, our journey began with the vision of simplifying event planning and providing exceptional service. Drawing on Sarah\'s industry expertise and innate creativity, we quickly established ourselves as a trusted name in the field.</string>
    <string name="AboutPage_4">Through our commitment to personalized service, meticulous attention to detail, and unwavering professionalism, we have built strong relationships with clients, vendors, and partners. From intimate gatherings to grand celebrations, we pour our heart and soul into every event we plan. Our goal is to create lasting memories and exceed our clients\' expectations.</string>
    <string name="AboutPage_5">As we continue to grow, our dedication to creating effortless events remains at the core of our ethos. We are honored to be a part of your special moments, and we look forward to making your event planning experience easy, enjoyable, and extraordinary.</string>
    <string name="you_asked_we_answered">You asked, We answered</string>
    <string name="help_center">Help Center</string>
    <string name="faq_1">It’s important to us that our customers feel fully informed and confident when working with us. That’s why we’ve made an extensive list of past customers’ questions along with answers from our experienced team. Browse through the information below, and if you have a question that isn’t included here, feel free to reach out to us today.</string>
    <string name="faq_2">How much does your event planning service cost?</string>
    <string name="faq_3">At Easy Events, our pricing is customized to fit your specific event needs. Factors such as the type of event, guest count, location, and services required are considered when providing a personalized quote. Contact us to discuss your event details, and we will provide you with a comprehensive and transparent pricing package.</string>
    <string name="faq_4">Can I be involved in the event planning process?</string>
    <string name="faq_5">Absolutely! We believe in collaboration and want you to be involved in the planning process. Your input and vision are essential in creating an event that reflects your style and preferences. We will work closely with you, providing regular updates, and seeking your approval at every stage of the planning process.</string>
    <string name="faq_6">Do you only work with specific types of events?</string>
    <string name="faq_7">No, we are experienced in planning a wide range of events, including weddings, corporate events, social gatherings, and more. Whether it\'s an intimate celebration or a grand affair, we have the expertise to handle events of all sizes and styles. Get in touch with us to discuss your event requirements.</string>
    <string name="faq_8">Can you assist with finding and managing vendors?</string>
    <string name="faq_9">Absolutely! We have a network of trusted vendors that we work with regularly. From venues and caterers to florists, photographers, and entertainment, we can recommend and coordinate with reliable professionals in the industry. We handle all vendor communications and negotiations, ensuring that you receive the best services within your budget.</string>
    <string name="more_questions">Got more questions? \nFeel free to contact us.</string>
    <string name="first_fragment_label">Pirmais</string>
    <string name="second_fragment_label">Otrais</string>
    <string name="submit">Submit</string>
    <string name="get_in_touch_with_us">Get in touch with us</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
</resources>