<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaqActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Easy Events"
            app:menu="@menu/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="54dp"
                android:gravity="center"
                android:text="@string/help_center"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/you_asked_we_answered"
                android:textColor="#000"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/faq_1"
                android:textColor="#000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/faq_2"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/faq_3"
                android:textColor="#000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/faq_4"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/faq_5"
                android:textColor="#000"
                android:layout_marginBottom="20dp"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/faq_6"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/faq_7"
                android:textColor="#000"
                android:layout_marginBottom="20dp"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/faq_8"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/faq_9"
                android:textColor="#000"
                android:layout_marginBottom="20dp"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/more_questions"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="24sp" />

            <Button
                android:id="@+id/contactButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/contact_us_button" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>