<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Easy Events"
            app:menu="@menu/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:text="@string/welcome_to_easy_events"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="#000"
                android:layout_marginTop="54dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/HomePage_1"
                android:textColor="#000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="270dp"
                android:text="@string/HomePage_2"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="90dp"
                android:text="@string/HomePage_3"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000"/>

            <Button
                android:id="@+id/contactButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/contact_us_button" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/subscribe_to_our_newsletter"
                android:textColor="#000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/subscribeEmailField"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                style="@style/Widget.AppCompat.EditText"/>

            <Button
                android:id="@+id/joinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/join_button" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subscribeMessage"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:visibility="gone"
                android:textColor="#000"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>