<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Easy Events"
            app:menu="@menu/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="54dp"
                android:gravity="center"
                android:text="@string/about_us"
                android:textColor="#000"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/AboutPage_1"
                android:textColor="#000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="370dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/AboutPage_2"
                android:textColor="#000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/our_story"
                android:textColor="#000"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/AboutPage_3"
                android:textColor="#000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/AboutPage_4"
                android:textColor="#000"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="360dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/AboutPage_5"
                android:textColor="#000"
                android:layout_marginBottom="20dp"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>