<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Easy Events"
            app:menu="@menu/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="54dp"
                android:gravity="center"
                android:text="@string/get_in_touch_with_us"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/nameField"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:autofillHints="name"
                style="@style/Widget.AppCompat.EditText"/>

            <EditText
                android:id="@+id/emailField"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:autofillHints="emailAddress"
                style="@style/Widget.AppCompat.EditText"/>

            <EditText
                android:id="@+id/subjectField"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textEmailSubject"
                android:hint="@string/subject"
                android:autofillHints="subject"
                style="@style/Widget.AppCompat.EditText"/>

            <EditText
                android:id="@+id/messageField"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="12"
                android:gravity="top|start"
                android:hint="@string/message"
                android:scrollbars="vertical"
                android:autofillHints="message"
                style="@style/Widget.AppCompat.EditText"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/submitMessage"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:visibility="gone"
                android:textColor="#000"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>